--- a/views/index.jade
+++ b/views/index.jade
@@ -12,6 +12,10 @@ block nav
     .progress
       .progress-bar(style='width:0%', data-id='job-progressbar')
     span(data-id='job-progress') 0%
+  .navbar-right
+    .navbar-text
+      | Temperature:
+      span(data-id='temperature') Unknown
 
 
 block content
