Use mjpg streamer

--- a/views/index.jade
+++ b/views/index.jade
@@ -17,6 +17,5 @@ block nav
       | Temperature:
       span(data-id='temperature') Unknown
 
-
 block content
-  img(src='/webcam.jpg', data-id='webcam')
+  img(src=webcam_url)
