Add audio notifications

--- a/views/index.jade
+++ b/views/index.jade
@@ -19,3 +19,5 @@ block nav
 
 block content
   img(src=webcam_url)
+  audio(src='/sounds/start.mp3', data-sound-id='start')
+  audio(src='/sounds/completed.mp3', data-sound-id='completed')
