Use BS4, add abort and home methods, and give better feedback on alarms etc

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,7 +1,17 @@
+.navbar
+	border-radius 0 !important
+	margin-bottom 1rem
+
+	.navbar-text
+		padding-top .425rem
+		padding-bottom .425rem
+
 .progress
-	display inline-block
-	width 100px
+	display inline-block !important
+	width 100px !important
 	margin 0 0.5rem
 	margin-bottom 0 !important
 	vertical-align middle
-	
+
+.navbar-right
+	margin-right: 0 !important
