--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,18 @@
+.navbar {
+  border-radius: 0 !important;
+  margin-bottom: 1rem;
+}
+.navbar .navbar-text {
+  padding-top: 0.425rem;
+  padding-bottom: 0.425rem;
+}
 .progress {
-  display: inline-block;
-  width: 100px;
+  display: inline-block !important;
+  width: 100px !important;
   margin: 0 0.5rem;
   margin-bottom: 0 !important;
   vertical-align: middle;
+}
+.navbar-right {
+  margin-right: 0 !important;
 }
